--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
 <body>
 
-    <div id="contenedor" class="container-fluid">
-        <div class="row">
+    <div id="contenedor hola" class="container-fluid">
+        <div class="row justify-content-center ">
             <div class="col-2 bg-black header">
                 <div class="imagen-logo d-flex  ">
                     <img id="logo" src="foto.png" alt="" width="150">
@@ -33,8 +33,9 @@
 
 
             </div>
-            <div id="section2" class="col-10 body">
-                <div class="container">
+        <div class="col-10 d-flex justify-content-center body">
+            <div id="section2" class="">
+                <div class="container ">
 
                     <div id="card" class="relative">
 
@@ -56,6 +57,8 @@
                     </div>
                 </div>
             </div>
+        </div>
+           
         </div>
 
     </div>
